--- a/css/styles.css
+++ b/css/styles.css
@@ -525,7 +525,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
@@ -536,6 +535,10 @@ img {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.footer-container-subscribtion-form-btn-svg {
+  margin-left: 16px;
 }
 
 /* Pop-up */
@@ -731,5 +734,6 @@ img {
   cursor: pointer;
   background-color: var(--iris);
   border: none;
+  border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
